<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"><![CDATA[
    tools:context=".BookAppointment">

    ]]>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchTextLayout"
            android:layout_width="318dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="hint"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/searchClinic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@android:string/search_go" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search Type" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:onClick="onRadioButtonClicked"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/addressChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="Address" />

        <RadioButton
            android:id="@+id/workHourChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Work Days" />

        <RadioButton
            android:id="@+id/serviceChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Services Offered" />
    </RadioGroup>

    <ListView
        android:id="@+id/serviceBookingListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>