<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createLogin">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:text="Account Creation"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="Name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/userRole"
                android:layout_width="match_parent"
                android:layout_height="76dp">

                <RadioButton
                    android:id="@+id/patientBtn"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:text="Patient" />

                <RadioButton
                    android:id="@+id/employeeBtn"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:text="Employee" />
            </RadioGroup>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/confpwd"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="74dp" />

        <Button
            android:id="@+id/create"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="Create" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>