<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/serviceNameSetText"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="Service Name"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/serviceRoleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/doctorRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="Doctor" />

        <RadioButton
            android:id="@+id/nurseRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Nurse" />

        <RadioButton
            android:id="@+id/staffRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:onClick="onRadioButtonClicked"
            android:text="Staff" />
    </RadioGroup>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Add Services"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/updateServiceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Update"
        tools:visibility="invisible" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="419dp"
        android:choiceMode="multipleChoice" >

    </ListView>

</LinearLayout>